--- a/internal/adapters/primary/web/docs/fitrkr.yml
+++ b/internal/adapters/primary/web/docs/fitrkr.yml
@@ -80,50 +80,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
-    get:
-      summary: List all users
-      operationId: listUsers
-      tags:
-        - Users
-      parameters:
-        - name: page
-          in: query
-          schema:
-            type: integer
-            default: 1
-          description: Page number
-        - name: limit
-          in: query
-          schema:
-            type: integer
-            default: 20
-          description: Number of items per page
-      responses:
-        '200':
-          description: List of users
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  users:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/User'
-                  total:
-                    type: integer
-                  page:
-                    type: integer
-                  limit:
-                    type: integer
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
   /user/{id}:
     get:
       summary: Get user by ID
@@ -309,6 +265,40 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /user/{id}/subscription:
+    get:
+      summary: Get user subscription
+      operationId: getUserSubscription
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+            description: User ID
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserSubscription'
+        '400':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     User:
@@ -344,7 +334,65 @@ components:
           type: string
           format: date-time
           example: "2025-01-15T10:30:00Z"
-
+          
+    UserSubscription:
+      type: object
+      properties:
+        plan:
+          type: string
+          format: plan
+          example: "basic"
+        billing_period:
+          type: string
+          format: period
+          nullable: true
+          example: "monthly"
+        started_at:
+          type: string
+          format: date-time
+          example: "2025-01-15T10:30:00Z"
+        expires_at:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2025-01-15T10:30:00Z"
+        auto_renew:
+          type: boolean
+          example: true
+        cancelled_at:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2025-01-15T10:30:00Z"
+        last_payment_at:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2025-01-15T10:30:00Z"
+        last_payment_amount:
+          type: number
+          format: double
+          nullable: true
+          example: 69.99
+        last_payment_currency:
+          type: string
+          format: currency
+          nullable: true
+          example: "USD"
+        trial_ends_at:
+          type: string
+          format: date-time
+          nullable: true
+          example: "2025-01-15T10:30:00Z"
+        created_at:
+          type: string
+          format: date-time
+          example: "2025-01-15T10:30:00Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: "2025-01-15T10:30:00Z"
+          
     Error:
       type: object
       properties:
