--- a/internal/adapters/primary/web/docs/fitrkr.yml
+++ b/internal/adapters/primary/web/docs/fitrkr.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.3
+openapi: 3.1.0
 info:
   title: Fitrkr API
   description: API for fitness tracking and workout management
@@ -8,6 +8,60 @@ servers:
     description: Local development server
 
 paths:
+  /auth/login:
+    post:
+      summary: Login
+      operationId: login
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: johndoe
+                password:
+                  type: string
+                  format: password
+                  minLength: 8
+                  example: SecurePass123!
+              required:
+                - username
+                - password
+      responses:
+        '200':
+          description: Login successful
+          headers:
+            Set-Cookie:
+              description: Sets session and refresh_token cookies
+              schema:
+                type: string
+                example: 
+                  - session=abc123; Path=/; HttpOnly
+                  - refresh_token=xyz789; Path=/auth/refresh; HttpOnly
+        '400':
+          description: Bad request - Invalid input data
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized - Invalid credentials
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /user:
     post:
       summary: Create a new user account
@@ -80,20 +134,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /user/{id}:
+
     get:
       summary: Get user by ID
       operationId: getUserByID
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
+      security:
+        - cookieAuth: []
       responses:
         '200':
           description: User found
@@ -101,6 +149,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '401':
+          description: Unauthorized - Authentication required
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '404':
           description: User not found
           content:
@@ -119,14 +173,6 @@ paths:
       operationId: updateUser
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       requestBody:
         required: true
         content:
@@ -174,14 +220,6 @@ paths:
       operationId: deleteUser
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       responses:
         '204':
           description: User deleted successfully
@@ -265,20 +303,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/subscription:
+  /user/subscription:
     get:
       summary: Get user subscription
       operationId: getUserSubscription
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-            description: User ID
       responses:
         '200':
           description: User found
@@ -299,20 +329,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/subscription/plan:
+  /user/subscription/plan:
     put:
       summary: Upgrade user plan
       operationId: upgradeUserPlan
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       requestBody:
         required: true
         content:
@@ -350,7 +372,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/subscription/payment:
+  /user/subscription/payment:
     put:
       summary: Update user record payment
       operationId: updateUserRecordPayment
@@ -364,17 +386,6 @@ paths:
             type: string
             format: uuid
           description: User ID
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                amount:
-                  type: number
-                currency:
-                  type: string
       responses:
         '200':
           description: User updated successfully
@@ -401,20 +412,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/subscription/cancel:
+  /user/subscription/cancel:
     put:
       summary: Cancel user subscription
       operationId: cancelUserSubscription
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       responses:
         '200':
           description: Subscription cancelled successfully
@@ -437,20 +440,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/subscription/trial:
+  /user/subscription/trial:
     put:
       summary: Start user trial 
       operationId: startUserTrial
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       responses:
         '200':
           description: Trial started successfully
@@ -474,20 +469,12 @@ paths:
                 $ref: '#/components/schemas/Error'
 
   
-  /user/{id}/settings:
+  /user/settings:
     get:
       summary: Get user settings
       operationId: getUserSettings
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-            description: User ID
       responses:
         '200':
           description: User found
@@ -513,14 +500,6 @@ paths:
       operationId: updateUserSettings
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       requestBody:
         required: true
         content:
@@ -570,20 +549,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/stats:
+  /user/stats:
     get:
       summary: Get user stats     
       operationId: getUserStats
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-            description: User ID
       responses:
         '200':
           description: User found
@@ -604,20 +575,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /user/{id}/stats/body:
+  /user/stats/body:
     put:
       summary: Update user body metrics
       operationId: updateUserBodyMetrics
       tags:
         - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-          description: User ID
       requestBody:
         required: true
         content:
@@ -659,6 +622,13 @@ paths:
 
 
 components:
+  securitySchemes:
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: session
+      style: cookie
+      description: Session cookie containing JWT access token
   schemas:
     User:
       type: object
